# Lambda

./: README.md  flake.nix  hie.yaml  lambda.cabal
src/: Lexer.hs  Main.hs  Parser.hs  Reduction.hs  Syntax.hs
