cabal-version:      2.4
name:               lambda
version:            0.1.0.0
license:            MIT
author:             Leon Vatthauer
category:           Education
extra-source-files:
  LICENSE
  README.md

common shared
  build-depends:
    , base        >=4.13.0.0  && <4.18.0.0.0
    , containers  >=0.5.9.1.0
    , extra       >=1.7
    , mtl         >=2.1.0     && <2.3
    , parsec      >=3.1.15.0
    , haskeline   >=0.8.0.0

  default-extensions:
    ImportQualifiedPost
    InstanceSigs

  hs-source-dirs:     src
  default-language:   Haskell2010

executable lambda
  import:        shared
  main-is:       Main.hs
  other-modules:
    Lexer
    Parser
    Reduction
    Syntax
